--- a/popup.html
+++ b/popup.html
@@ -3,5 +3,7 @@
 <body>
     <button id="extractData">Extract Data</button>
     <script src="popup.js"></script>
+    <script src="jquery.js"></script>
+
 </body>
 </html>
