--- a/popup.html
+++ b/popup.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
-<body>
-    <button id="extractData">Extract Data</button>
-    <script src="popup.js"></script>
+  <head>
     <script src="jquery.js"></script>
-
-</body>
+    <script src="popup.js"></script>
+  </head>
+  <body>
+    <h1>Netflix Data</h1>
+  </body>
 </html>
