--- a/popup.html
+++ b/popup.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script src="jquery.js"></script>
-    <script src="popup.js"></script>
+    <meta charset="utf-8" />
+    <link rel="stylesheet" href="popup.css" />
   </head>
   <body>
     <h1>Netflix Data</h1>
+    <button id="exportButton">Export Data</button>
+    <script src="popup.js"></script>
   </body>
 </html>
